# Kerlog

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Test.cpp  kerlog.cpp  kerlog.h
